--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div class="col-3 ">
               <legend style="font-size: 15px;">We accept:</legend>
-              <div class=" d-flex border border-secondary-subtle bg-secondary" >
+              <div class=" d-flex border border-secondary-subtle bg-secondaryP" >
                 <div class="form-check ">
                   <input class="form-check-input" type="radio" name="paymentMethod" id="MasterCard" value="MasterCard" checked>
                   <label class="form-check-label" for="MasterCard">
